--- a/src/exceptionHandling/exception.properties
+++ b/src/exceptionHandling/exception.properties
@@ -1,9 +1,9 @@
-In JAVA Exception and Error class extentd parent class which is throwable
+In JAVA Exception and Error class extends parent class which is throwable
 
 According to SUN there are three types of exception 
 
 1. Checked exceptions are compile time exception example IOException SQLException
-2. Un-Checked exception are run time exception example array index out of bound exception, null pointer exceprion
+2. Un-Checked exception are run time exception example array index out of bound exception, null pointer exception
 3. error - these are unchecked. Error is irrecoverable e.g. OutOfMemoryError, VirtualMachineError, AssertionError etc.
 
 JAVA exception handling keywords ..
